--- a/hw1.yml
+++ b/hw1.yml
@@ -3,9 +3,11 @@
   remote_user: ubuntu
   tasks:
   - name: install apache
+    become: yes
     apt:
       name: 2.4.18-2ubuntu3.9
   - name: git clone
+    become: yes
     git:
       repo: https://github.com/enrui-shi/cse356
       dest: ver/www/html
